# Py16Web_HW10

./: README.md  pyproject.toml
hw_project/hw_project/: urls.py
hw_project/quotes/: forms.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: login.html  singup.html
hw_project/utils/: authors.json
