[tool.poetry]
name = "py16web-hw10"
version = "0.1.0"
description = ""
authors = ["djmary-k <kondratyukmv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
